mediabox1-01 markup added

--- a/index.html
+++ b/index.html
@@ -16,15 +16,37 @@
   <![endif]-->
 </head>
 <body>
-<h1>mediabox-set1</h1>
-<!-- begin mediabox1-01 placeholder -->
-<h2 class="item-id">mediabox1-01</h2>
-<div class="row">
-  <div class="col-sm-3">39</div>
-  <div class="col-sm-9">
-    a
+  <h1>mediabox-set1</h1>
+  <!-- begin mediabox1-01 placeholder -->
+  <h2 class="item-id">mediabox1-01</h2>
+  <div class="row">
+    <div class="col-sm-3">39</div>
+    <div class="col-sm-9">
+      <!-- begin mediabox1-01 -->
+      <div class="mediabox1-01">
+        <div class="col-xs-3 col-sm-3">
+          <div class="mediabox1-01_img-holder">
+            <img src="img.jpg" alt="img alt">
+          </div>
+        </div>
+        <div class="col-xs-9 col-sm-9 mediabox1-01_media-right">
+          <!--begin text-->
+          <h3>Media title 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.</p>
+          <!--end text-->
+          <div class="mediabox1-01_extras">
+            <button>read more</button>
+            <button>read more</button>
+          </div>
+        </div>
+      </div>
+      <!-- end mediabox1-01 -->
+    </div>
   </div>
-</div>
-<!-- end mediabox1-01 placeholder -->
+  <!-- end mediabox1-01 placeholder -->
 </body>
 </html>
