mediabox1-01 compiled ok

--- a/index.html
+++ b/index.html
@@ -29,20 +29,18 @@
             <img src="img.jpg" alt="img alt">
           </div>
         </div>
-        <div class="col-xs-9 col-sm-9 mediabox1-01_media-right">
-          <!--begin text-->
+        <section class="col-xs-9 col-sm-9 mediabox1-01_media-right">
           <h3>Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur.</p>
-          <!--end text-->
-          <div class="mediabox1-01_extras">
+          <footer class="mediabox1-01_extras">
             <button>read more</button>
             <button>read more</button>
-          </div>
-        </div>
+          </footer>
+        </section>
       </div>
       <!-- end mediabox1-01 -->
     </div>
