--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="col-sm-3">39</div>
     <div class="col-sm-9">
       <!-- begin mediabox1-01 -->
-      <div class="mediabox1-01">
+      <div class="row mediabox1-01">
         <div class="col-xs-3 col-sm-3">
           <div class="mediabox1-01_img-holder">
             <img src="img.jpg" alt="img alt">
@@ -36,7 +36,7 @@
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur.</p>
-          <footer class="mediabox1-01_extras">
+          <footer class="row mediabox1-01_extras">
             <button>read more</button>
             <button>read more</button>
           </footer>
