mediabox1-02 paceholder added

--- a/index.html
+++ b/index.html
@@ -46,5 +46,16 @@
     </div>
   </div>
   <!-- end mediabox1-01 placeholder -->
+  <!-- begin mediabox1-02 placeholder -->
+  <h2 class="item-id">mediabox1-02</h2>
+  <div class="row">
+    <div class="col-sm-3">39</div>
+    <div class="col-sm-9">
+      <!-- begin mediabox1-02 -->
+      
+      <!-- end mediabox1-02 -->
+    </div>
+  </div>
+  <!-- end mediabox1-02 placeholder -->
 </body>
 </html>
