--- a/index.html
+++ b/index.html
@@ -52,7 +52,28 @@
     <div class="col-sm-3">39</div>
     <div class="col-sm-9">
       <!-- begin mediabox1-02 -->
-      
+      <div class="mediabox1-02">
+        <div class="col-xs-3 col-sm-3">
+          <div class="mediabox1-02_img-holder">
+            <img src="img.jpg" alt="img alt">
+          </div>
+        </div>
+        <section class="col-xs-9 col-sm-9 mediabox1-02_media-right">
+          <h3>Media title 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.</p>
+          <button class="btn btn-md">read more</button>
+          <button class="btn btn-md">read more</button>
+        </section>
+        <footer class="row mediabox1-02_extras col-sm-12">
+          <p>extras</p>
+          <button>read more</button>
+          <button>read more</button>
+        </footer>
+      </div>
       <!-- end mediabox1-02 -->
     </div>
   </div>
