--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="col-sm-3">39</div>
     <div class="col-sm-9">
       <!-- begin mediabox1-02 -->
-      <div class="mediabox1-02">
+      <div class="row mediabox1-02">
         <div class="col-xs-3 col-sm-3">
           <div class="mediabox1-02_img-holder">
             <img src="img.jpg" alt="img alt">
