--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
         <section class="col-xs-9 col-sm-9 mediabox1-01_media-right">
           <h3>Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur.</p>
+            tempor incididunt ut labore et dolore magna aliqua.</p>
           <footer class="row mediabox1-01_extras">
             <button>read more</button>
             <button>read more</button>
