--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>mediabox-set1</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/index.bundle.css">
+  <link rel="stylesheet" href="index.bundle.css">
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -17,63 +17,63 @@
 </head>
 <body>
   <h1>mediabox-set1</h1>
-  <!-- begin mediabox1-01 placeholder -->
-  <h2 class="item-id">mediabox1-01</h2>
+  <!-- begin mediabox101 placeholder -->
+  <h2 class="item-id">mediabox101</h2>
   <div class="row">
     <div class="col-sm-3">39</div>
     <div class="col-sm-9">
-      <!-- begin mediabox1-01 -->
-      <div class="row mediabox1-01">
+      <!-- begin mediabox101 -->
+      <div class="row mediabox101">
         <div class="col-xs-3 col-sm-3">
-          <div class="mediabox1-01_img-holder">
+          <div class="mediabox101_img-holder">
             <img src="img.jpg" alt="img alt">
           </div>
         </div>
-        <section class="col-xs-9 col-sm-9 mediabox1-01_media-right">
+        <section class="col-xs-9 col-sm-9 mediabox101_media-right">
           <h3>Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua.</p>
-          <footer class="row mediabox1-01_extras">
-            <button>read more</button>
-            <button>read more</button>
+          <footer class="row mediabox101_extras">
+            <button class="btn btn1-01">read more</button>
+            <button class="btn btn1-01">read more</button>
           </footer>
         </section>
       </div>
-      <!-- end mediabox1-01 -->
+      <!-- end mediabox101 -->
     </div>
   </div>
-  <!-- end mediabox1-01 placeholder -->
-  <!-- begin mediabox1-02 placeholder -->
-  <h2 class="item-id">mediabox1-02</h2>
+  <!-- end mediabox101 placeholder -->
+  <!-- begin mediabox102 placeholder -->
+  <h2 class="item-id">mediabox102</h2>
   <div class="row">
     <div class="col-sm-3">39</div>
     <div class="col-sm-9">
-      <!-- begin mediabox1-02 -->
-      <div class="row mediabox1-02">
+      <!-- begin mediabox102 -->
+      <div class="row mediabox102">
         <div class="col-xs-3 col-sm-3">
-          <div class="mediabox1-02_img-holder">
+          <div class="mediabox102_img-holder">
             <img src="img.jpg" alt="img alt">
           </div>
         </div>
-        <section class="col-xs-9 col-sm-9 mediabox1-02_media-right">
+        <section class="col-xs-9 col-sm-9 mediabox102_media-right">
           <h3>Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur.</p>
-          <button class="btn btn-md">read more</button>
-          <button class="btn btn-md">read more</button>
+          <button class="btn btn1-01">read more</button>
+          <button class="btn btn1-01">read more</button>
         </section>
-        <footer class="row mediabox1-02_extras col-sm-12">
+        <footer class="row mediabox102_extras col-sm-12">
           <p>extras</p>
-          <button>read more</button>
-          <button>read more</button>
+          <button class="btn btn1-01">read more</button>
+          <button class="btn btn1-01">read more</button>
         </footer>
       </div>
-      <!-- end mediabox1-02 -->
+      <!-- end mediabox102 -->
     </div>
   </div>
-  <!-- end mediabox1-02 placeholder -->
+  <!-- end mediabox102 placeholder -->
 </body>
 </html>
