--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
         <section class="col-xs-9 col-sm-9 mediabox101_media-right">
           <h3>Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.</p>
+          tempor incididunt ut labore et dolore magna aliqua.</p>
           <footer class="row mediabox101_extras">
-            <button class="btn btn1-01">read more</button>
-            <button class="btn btn1-01">read more</button>
+            <span class="btn btn1-01">
+              Read more
+              <svg class="mediabox101_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+              </svg>
+            </span>
+            <span class="btn btn1-01">
+              Read more
+              <svg class="mediabox101_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+              </svg>
+            </span>
           </footer>
         </section>
       </div>
@@ -62,13 +72,33 @@
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur.</p>
-          <button class="btn btn1-01">read more</button>
-          <button class="btn btn1-01">read more</button>
+          <span class="btn btn1-01">
+            Read more
+            <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+            </svg>
+          </span>
+          <span class="btn btn1-01">
+            Read more
+            <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+            </svg>
+          </span>
         </section>
         <footer class="row mediabox102_extras col-sm-12">
           <p>extras</p>
-          <button class="btn btn1-01">read more</button>
-          <button class="btn btn1-01">read more</button>
+          <span class="btn btn1-01">
+            Read more
+            <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+            </svg>
+          </span>
+          <span class="btn btn1-01">
+            Read more
+            <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+            </svg>
+          </span>
         </footer>
       </div>
       <!-- end mediabox102 -->
