--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
     <div class="col-sm-9">
       <!-- begin mediabox101 -->
       <div class="row mediabox101">
-        <div class="col-xs-3 col-sm-3">
+        <div class="mediabox101_media-left">
           <div class="mediabox101_img-holder">
-            <img src="img.jpg" alt="img alt">
+            <img src="img.jpg" alt="img alt" title="img title">
           </div>
         </div>
-        <section class="col-xs-9 col-sm-9 mediabox101_media-right">
-          <h3>Media title 1</h3>
+        <section class="mediabox101_media-right">
+          <h3 class="mediabox101_heading">Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua.</p>
           <footer class="row mediabox101_extras">
-            <span class="btn btn1-01">
+            <span class="btn btn1-01" tabindex="0">
               Read more
               <svg class="mediabox101_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
               </svg>
             </span>
-            <span class="btn btn1-01">
+            <span class="btn btn1-01" tabindex="0">
               Read more
               <svg class="mediabox101_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
@@ -60,25 +60,25 @@
     <div class="col-sm-9">
       <!-- begin mediabox102 -->
       <div class="row mediabox102">
-        <div class="col-xs-3 col-sm-3">
+        <div class="mediabox102_media-left">
           <div class="mediabox102_img-holder">
-            <img src="img.jpg" alt="img alt">
+            <img src="img.jpg" alt="img alt" title="img title">
           </div>
         </div>
-        <section class="col-xs-9 col-sm-9 mediabox102_media-right">
-          <h3>Media title 1</h3>
+        <section class="mediabox102_media-right">
+          <h3 class="mediabox102_heading">Media title 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur.</p>
-          <span class="btn btn1-01">
+          <span class="btn btn1-01" tabindex="0">
             Read more
             <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
             </svg>
           </span>
-          <span class="btn btn1-01">
+          <span class="btn btn1-01" tabindex="0">
             Read more
             <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
@@ -87,13 +87,13 @@
         </section>
         <footer class="row mediabox102_extras col-sm-12">
           <p>extras</p>
-          <span class="btn btn1-01">
+          <span class="btn btn1-01" tabindex="0">
             Read more
             <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
             </svg>
           </span>
-          <span class="btn btn1-01">
+          <span class="btn btn1-01" tabindex="0">
             Read more
             <svg class="mediabox102_btn_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
